# Axis

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODESTYLE.md  README.md
.github/workflows/: CMake.yml  cmake.yml
Axis/: Axis  CMakeLists.txt
Axis/Core/: CMakeLists.txt
Axis/Core/Include/Axis/: Application.hpp  ApplicationComponent.hpp  ComponentCollection.hpp  Core  CoreExport.hpp  CorePch.hpp
Axis/Core/Source/Axis/: Application.cpp  ApplicationComponent.cpp  ComponentCollection.cpp
Axis/Graphics/: CMakeLists.txt
Axis/Graphics/GraphicsVulkan/: CMakeLists.txt
Axis/Graphics/GraphicsVulkan/Include/Axis/: GraphicsVulkanExport.hpp  GraphicsVulkanPch.hpp  VkPtr.hpp  VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanCommandPool.hpp  VulkanDescriptorPool.hpp  VulkanDeviceContext.hpp  VulkanDeviceQueueFamily.hpp  VulkanFence.hpp  VulkanFramebuffer.hpp  VulkanFramebufferCache.hpp  VulkanGraphicsDevice.hpp  VulkanGraphicsPipeline.hpp  VulkanGraphicsSystem.hpp  VulkanPhysicalDevice.hpp  VulkanRenderPass.hpp  VulkanRenderPassCache.hpp  VulkanResourceHeap.hpp  VulkanResourceHeapLayout.hpp  VulkanSampler.hpp  VulkanShaderModule.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanUtility.hpp
Axis/Graphics/GraphicsVulkan/Source/Axis/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanDeviceContext.cpp  VulkanDeviceQueueFamily.cpp  VulkanFence.cpp  VulkanFramebuffer.cpp  VulkanFramebufferCache.cpp  VulkanGraphicsDevice.cpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsSystem.cpp  VulkanPhysicalDevice.cpp  VulkanRenderPass.cpp  VulkanRenderPassCache.cpp  VulkanResourceHeap.cpp  VulkanResourceHeapLayout.cpp  VulkanSampler.cpp  VulkanShaderModule.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp
Axis/Graphics/Include/Axis/: Buffer.hpp  Color.hpp  DeviceChild.hpp  DeviceContext.hpp  Fence.hpp  Framebuffer.hpp  Graphics  GraphicsCommon.hpp  GraphicsDevice.hpp  GraphicsExport.hpp  GraphicsPch.hpp  GraphicsPipeline.hpp  GraphicsSystem.hpp  Pipeline.hpp  RenderPass.hpp  ResourceHeap.hpp  ResourceHeapLayout.hpp  Sampler.hpp  ShaderModule.hpp  StatedGraphicsResource.hpp  SwapChain.hpp  Texture.hpp  TextureLoader.hpp
Axis/Graphics/Private/Axis/: ColorImpl.hpp  ColorImpl.inl  GraphicsCommonImpl.inl  GraphicsPipelineImpl.inl  SamplerImpl.inl  TextureImpl.inl
Axis/Graphics/Source/Axis/: Buffer.cpp  DeviceChild.cpp  DeviceContext.cpp  Fence.cpp  Framebuffer.cpp  GraphicsDevice.cpp  GraphicsPipeline.cpp  GraphicsSystem.cpp  Pipeline.cpp  RenderPass.cpp  ResourceHeap.cpp  ResourceHeapLayout.cpp  Sampler.cpp  ShaderModule.cpp  StatedGraphicsResource.cpp  SwapChain.cpp  Texture.cpp  TextureLoader.cpp
Axis/Renderer/: CMakeLists.txt
Axis/Renderer/Include/Axis/: PackSprite.hpp  Renderer  RendererExport.hpp  RendererPch.hpp  SpriteBatch.hpp  SpriteFont.hpp
Axis/Renderer/Private/Axis/: PackSpriteImpl.inl
Axis/Renderer/Source/Axis/: SpriteBatch.cpp  SpriteFont.cpp
Axis/System/: CMakeLists.txt
Axis/System/Include/Axis/: Allocator.hpp  Assembly.hpp  Assert.hpp  Config.hpp  Enum.hpp  Event.hpp  Exception.hpp  FileStream.hpp  Function.hpp  HashMap.hpp  HashSet.hpp  Iterator.hpp  LinkedList.hpp  List.hpp  Math.hpp  Matrix.hpp  Memory.hpp  Nullable.hpp  Path.hpp  Random.hpp  Rectangle.hpp  SinglyLinkedList.hpp  SmartPointer.hpp  Span.hpp  StaticArray.hpp  Stream.hpp  String.hpp  StringView.hpp  System  System.hpp  SystemExport.hpp  SystemPch.hpp  TimePeriod.hpp  Timer.hpp  Trait.hpp  Utility.hpp  Variant.hpp  Vector2.hpp  Vector3.hpp
Axis/System/Include/Axis/Platform/Win32/: Win32Assembly.hpp  Win32Timer.hpp
Axis/System/Private/Axis/: AllocatorImpl.inl  CallTraits.inl  CompressedPair.inl  CoreContainer.inl  EnumImpl.inl  EventImpl.inl  FunctionImpl.inl  HashMapImpl.inl  HashSetImpl.inl  LinkedListImpl.inl  ListImpl.inl  MathImpl.inl  MatrixImpl.inl  MemoryImpl.inl  NullableImpl.inl  RandomImpl.inl  RectangleImpl.inl  SinglyLinkedListImpl.inl  SmartPointerImpl.inl  SpanImpl.inl  StaticArrayImpl.inl  StringImpl.inl  StringViewImpl.inl  TimePeriodImpl.inl  UtilityImpl.inl  VariantImpl.inl  Vector2Impl.inl  Vector3Impl.inl
Axis/System/Source/Axis/: Exception.cpp  FileStream.cpp  Memory.cpp  Path.cpp  Random.cpp  SmartPointer.cpp  Stream.cpp
Axis/System/Source/Axis/Platform/Win32/: Win32Assembly.cpp  Win32Path.cpp  Win32System.cpp  Win32Timer.cpp
Axis/Window/: CMakeLists.txt
Axis/Window/Include/Axis/: DisplayWindow.hpp  Input.hpp  Keyboard.hpp  Mouse.hpp  Window  WindowExport.hpp  WindowPch.hpp
Axis/Window/Include/Axis/Platform/Win32/: Win32DisplayWindow.hpp  Win32Mouse.hpp
Axis/Window/Source/Axis/: Keyboard.cpp  Mouse.cpp
Axis/Window/Source/Axis/Platform/Win32/: Win32DisplayWindow.cpp  Win32Keyboard.cpp  Win32Mouse.cpp
CMake/: Utility.cmake
Example/HelloTriangle/: CMakeLists.txt
Example/HelloTriangle/Source/HelloTriangle/: HelloTriangle.cpp
Example/RotatingCube/: CMakeLists.txt
Example/RotatingCube/Source/RotatingCube/: RotatingCube.cpp
Example/SimpleApplicationLoop/: CMakeLists.txt
Example/SimpleApplicationLoop/Source/SimpleApplicationLoop/: SimpleApplicationLoop.cpp
Example/SpriteBatching/: CMakeLists.txt
Example/SpriteBatching/Source/SpriteBatching/: SpriteBatching.cpp
Example/Texturing/: CMakeLists.txt
Example/Texturing/Source/Texturing/: Texturing.cpp
Test/: CMakeLists.txt
Test/System/: Allocator.cpp  CMakeLists.txt  Event.cpp  Function.cpp  HashMap.cpp  HashSet.cpp  LeakTester.hpp  List.cpp  Math.cpp  Memory.cpp  Random.cpp  Rectangle.cpp  SmartPointer.cpp  StaticArray.cpp  String.cpp  TestAllocator.hpp  Variant.cpp  Vector2.cpp  Vector3.cpp
